--- a/HW2 (TodoList)/src/App.css
+++ b/HW2 (TodoList)/src/App.css
@@ -1,3 +1,10 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+}
+
+.container {
+  width: 50%;
 }
