--- a/HW2 (TodoList)/src/index.css
+++ b/HW2 (TodoList)/src/index.css
@@ -7,8 +7,16 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
